Upgrade dependencies and adapt `ts-patch`
